fix: navbar spacing on right side

--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 80px;
   width: 100%;
